--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "git": "^0.1.5"
   },
   "devDependencies": {
     "@ljharb/tsconfig": "^0.3.2",
