--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "git": "^0.1.5"
+    "git": "^0.1.5",
+    "mysql2": "^3.14.0",
+    "slashes": "^2.0.0"
   },
   "devDependencies": {
     "@ljharb/tsconfig": "^0.3.2",
